--- a/diet-web/package.json
+++ b/diet-web/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rudraksh MK",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "diet": "^0.10.8"
+  }
 }
